[build-system]
requires = ["setuptools>=64", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
fallback_version = "0.0"

[project]
classifiers = [
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
]
name = "nomad-distribution"
description = "nomad distribution template"
dynamic = ["version"]
readme = "README.md"
requires-python = ">=3.10, <3.13"
license = { file = "LICENSE" }
dependencies = ["nomad-lab[parsing, infrastructure]>=1.3.16.dev178", "setuptools"]


[project.urls]
repository = "https://github.com/hampusnasstrom/nomad-sintering-image"

[project.optional-dependencies]
plugins = [
  "nomad-measurements==1.2.3",
  "nomad-material-processing==1.0.5",
  "nomad-sintering",
]
jupyter = [
  "voila"
]
dev = ["nomad-lab[parsing, infrastructure, dev]>=1.3.4"]

[tool.uv]
extra-index-url = [
  "https://gitlab.mpcdf.mpg.de/api/v4/projects/2187/packages/pypi/simple",
]
constraint-dependencies = ["hyperspy>=1.7.6"]
prerelease = "allow"

[tool.uv.sources]
nomad-sintering = { git = "https://github.com/hampusnasstrom/nomad-sintering.git", rev = "v1.0.11" }

[tool.setuptools.packages.find]
exclude = ["gui*", "docs*", "config*"]
